[project]
name = "xee"
dynamic = ["version"]
description = "A Google Earth Engine extension for Xarray."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
  {name = "Google LLC", email = "noreply@google.com"},
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Atmospheric Science",
]
dependencies = [
  "xarray[parallel]",
  "earthengine-api>=1.6.12",
  "pyproj",
  "affine",
  "shapely",
]

[project.entry-points."xarray.backends"]
ee = "xee:EarthEngineBackendEntrypoint"

[project.optional-dependencies]
tests = [
  "absl-py",
  "pytest",
  "pyink",
  "rasterio",
  "rioxarray",
  "typing_extensions",
]
dataflow = [
  "absl-py",
  "apache-beam[gcp]",
  "gcsfs<=2026.3.0",
  "xarray-beam",
]
examples = [
  "xee[dataflow]",
]

[project.urls]
Homepage = "https://github.com/google/xee"
Issues = "https://github.com/google/Xee/issues"

[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.pyink]
line-length = 80
preview = true
pyink-indentation = 2
pyink-use-majority-quotes = true

[tool.setuptools]
packages = ["xee"]

[tool.setuptools_scm]
fallback_version = "9999"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-64", "osx-arm64", "win-64"]

[tool.pixi.pypi-dependencies]
xee = { path = ".", editable = true }

[tool.pixi.dependencies]
python = "3.12.*"

[tool.pixi.feature.docs.pypi-dependencies]
Jinja2 = "==3.1.6"
myst-nb = "==1.4.0"
myst-parser = "==4.0.1"
scipy = "==1.15.3"
sphinx = "==8.1.3"
sphinx-rtd-theme = "==3.1.0"

[tool.pixi.feature.docs.tasks]
docs-build = { cmd = "sphinx-build -W -b html docs docs/_build/html" }
docs-check = { cmd = "sphinx-build -W -n -b html docs docs/_build/html" }

[tool.pixi.environments]
default = { solve-group = "default" }
dataflow = { features = ["dataflow"], solve-group = "dataflow" }
docs = { features = ["docs"], solve-group = "docs" }
examples = { features = ["examples", "dataflow"], solve-group = "dataflow" }
tests = { features = ["tests"], solve-group = "tests" }

[tool.pixi.tasks]
